# precious-metal-tracker

./: README.md  pyproject.toml
apps/personal-tracking-service/: README.md  pyproject.toml
apps/personal-tracking-service/src/tracking-service/: main.py
